@@ -28,28 +28,6 @@
   <securityPolicy
       component="zope.app.securitypolicy.zopepolicy.ZopeSecurityPolicy" />
 
-  <!-- we register special IAbsoluteURL views on grok views so that
-       can have them inspect __view_name__ instead of __name__.  
-       __name__ is already used as the class name, and overriding it
-       may make error messages more confusing.  -->
-
-  <view
-      for=".interfaces.IGrokView"
-      name="absolute_url"
-      factory=".components.GrokViewAbsoluteURL"
-      type="zope.publisher.interfaces.http.IHTTPRequest"
-      permission="zope.Public"
-      allowed_interface="zope.traversing.browser.interfaces.IAbsoluteURL"
-      />
-
-  <view
-      for=".interfaces.IGrokView"
-      factory=".components.GrokViewAbsoluteURL"
-      type="zope.publisher.interfaces.http.IHTTPRequest"
-      permission="zope.Public"
-      provides="zope.traversing.browser.interfaces.IAbsoluteURL"
-      />
-
   <!-- this overrides Zope 3's publication factories because they have
        the same name; we also need to change the priority because of
        the ZCML discriminator -->
